pbc_contract_codegen/tests/action/fail/invalid_action_attribute.stderr
error: custom attribute panicked
 --> tests/action/fail/invalid_action_attribute.rs:8:1
  |
8 | #[action(cakes = "galore")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid attribute found, valid attributes are: shortname

warning: unused import: `pbc_contract_common::context::ContractContext`
 --> tests/action/fail/invalid_action_attribute.rs:4:5
  |
4 | use pbc_contract_common::context::ContractContext;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
